# redtail

./: .editorconfig  Cargo.toml  Readme.md  fly.toml
agent/: Cargo.toml  Dockerfile  example.redis.conf  machine.conf  redis.conf
agent/container/: entrypoint.sh  install.sh  profile.sh  redis.apt.list
